# city-of-mist

./: .env  .gitignore  Cargo.toml  README.md
_frontend/: Cargo.toml  index.html
_frontend/src/: components.rs  main.rs
_frontend/src/components/: app.rs  cards.rs
_frontend/src/components/cards/: character_card.rs  theme_card.rs
_frontend/src/components/dice/: cube.rs  dice_agent.rs  mod.rs  model.rs  renderer.rs
_frontend/styles/: character_card.scss  dice_overlay.scss  global.scss  styles.scss
backend/: Cargo.toml
backend/src/: main.rs  routes.rs  service.rs  socket.rs
backend/src/routes/: auth.rs  error.rs  user.rs  websocket.rs
backend/src/service/: _inject.rs  auth.rs  character.rs  database.rs  rooms.rs  watcher.rs  websocket.rs
common/: Cargo.toml
common/src/: campaign.rs  character.rs  lib.rs  models.rs  theme.rs  theme_descriptor.rs  user.rs
common/src/managers/: character.rs  theme.rs  user.rs
common/src/models/: campaign.rs  character.rs  theme.rs  theme_descriptor.rs  user.rs
data/: Cargo.toml
data/data/: adaptation.json  ally.json  base_of_operations.json  bastion.json  crew.json  defining_event.json  defining_relationship.json  divination.json  expression.json  mission.json  mobility.json  personality.json  possessions.json  relic.json  ride.json  routine.json  subversion.json  training.json
data/src/: lib.rs  theme_descriptors.rs
db/: .env  Cargo.toml  repatch.sh
db/migrations/2022-06-21-200732_create_users/: up.sql
db/migrations/2022-06-22-153121_create_themes/: down.sql  up.sql
db/migrations/2022-06-22-154326_create_characters/: down.sql  up.sql
db/migrations/2022-06-22-155129_create_campaigns/: down.sql  up.sql
db/src/: lib.rs  managers.rs  models.rs  schema.patch  schema.rs
db/src/managers/: character.rs  theme.rs  user.rs
db/src/models/: character.rs  theme.rs  user.rs
entity/: Cargo.toml
entity/src/: campaign.rs  campaign_member.rs  character.rs  character_theme.rs  lib.rs  theme.rs  user.rs
frontend/: Cargo.toml  index.html
frontend/assets/: tex-die.png~
frontend/src/: lib.rs  state.rs  utils.rs
frontend/src/components/: app.rs  mod.rs  socket.rs
frontend/src/components/card/: character_card.rs  mod.rs  theme_card.rs
frontend/src/components/dice/: cube.rs  dice_overlay.rs  mod.rs  model.rs  physics.rs  renderer.rs  shader.rs  texture.rs
frontend/src/components/utils/: autoresize.rs  mod.rs
frontend/styles/: character_card.scss  styles.scss  theme_card.scss
migration/: Cargo.toml
migration/src/: lib.rs  m20220404_000001_create_users.rs  m20220504_000001_create_themes_characters.rs  m20220521_000001_create_campaigns.rs
socket/: Cargo.toml
socket/src/: js_socket.rs  lib.rs  ws_socket.rs
