[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
data = { version = "0.1.0", path = "../data" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
log = "0.4.14"
dioxus = { version = "0.2.4", features = ["web", "fermi"] }

js-sys = "0.3.57"
rapier3d = { version = "0.11.1", features = ["wasm-bindgen", "enhanced-determinism"] }
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-logger = "0.2.0"
ws_stream_wasm = { version = "0.7.3", features = ["tokio_io"] }
wasm-bindgen-futures = "0.4.30"
send_wrapper = "0.5.0"
rand = "0.8.5"
getrandom = { version = "0.2.6", features = ["js"] }
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.2.4", features = ["futures"] }
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.57"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
  'HtmlImageElement',
  'Window',
]
