[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.0"
async-session = "3.0.0"
async-trait = "0.1.53"
common = { path = "../common" }
data = { path = "../data" }
db = { path = "../db" }
dotenv = "0.15.0"
futures = "0.3.21"
nanoid = "0.4.0"
parking_lot = { version = "0.12.0", features = ["send_guard"] }
rand = "0.8.5"
serde = "1.0.136"
serde_json = "1.0.79"
shaku = { version = "0.6.1", features = ["thread_safe", "derive"] }
socket = { path = "../socket", features = ["ws"] }
tokio = { version = "1.17.0", features = ["macros"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
tokio-util = "0.7.1"
warp = "0.3.2"
