[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
include_dir = "0.7.2"
lazy_static = "1.4.0"
serde = "1.0.136"
serde_json = "1.0.78"
