[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { version = "0.1.0", path = "../common" }
data = { version = "0.1.0", path = "../data" }
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-logger = "0.2.0"
yew = { git = "https://github.com/yewstack/yew.git", rev="8a16d4fc3d9b96a3aab7c98b3ab61b55deac9d3c" }
# yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yew-router = "0.16.0"
yewdux = { git = "https://github.com/intendednull/yewdux", rev = "7b5b0a8e76f27471aa7a922d62cf242a57d151fd" }
# yewdux = { git = "https://github.com/intendednull/yewdux" }
js-sys = "0.3.57"
rapier3d = { version = "0.11.1", features = ["wasm-bindgen", "enhanced-determinism"] }
yew-agent = { git = "https://github.com/yewstack/yew.git", rev="8a16d4fc3d9b96a3aab7c98b3ab61b55deac9d3c" }
socket = { path = "../socket", features = ["js"] }
ws_stream_wasm = { version = "0.7.3", features = ["tokio_io"] }
wasm-bindgen-futures = "0.4.30"
send_wrapper = "0.5.0"
rand = "0.8.5"
getrandom = { version = "0.2.6", features = ["js"] }
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.2.4", features = ["futures"] }

[dependencies.web-sys]
version = "0.3.57"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
  'HtmlImageElement',
  'Window',
]
